[package]
name = "livesplit-one-desktop"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["software-rendering"]
software-rendering = ["livesplit-core/software-rendering"]

[dependencies]
# druid = { path = "druid/druid" }
druid = { git = "https://github.com/linebender/druid" }
livesplit-core = { git = "https://github.com/LiveSplit/livesplit-core", features = ["rendering", "font-loading", "auto-splitting"] }
image = "0.24.3"
log = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0.85", features = ["derive"] }
serde_yaml = "0.9.11"
fern = "0.6.0"
chrono = { version = "0.4.0", features = ["serde", "clock"], default-features = false }
directories = "4.0.1"
backtrace = "0.3.61"

[profile.dev.package."*"]
opt-level = 3
# debug = false
debug-assertions = false
overflow-checks = false

[profile.dev.build-override]
opt-level = 0

[profile.release]
lto = true
panic = "abort"
# debug = true

[profile.release.build-override]
opt-level = 0
